src/localpen/styles/localpen.scss
/* ... */
#overlay.hidden {
  animation: overlayfadeOut 0.4s forwards;
}

#modal-container.hidden {
  animation: fadeOut 0.4s forwards;
}

#modal {
  background-color: rgb(245, 245, 245);
  border-radius: 5px;
  display: flex;
  flex-direction: column;
  height: 80vh;
  opacity: 1;
  overflow: hidden;
  padding: 10px;
  width: 80vw;

  &.small {
    height: auto;
    max-width: calc(100vw - 40px);
    min-height: 180px;
    width: 400px;
  }

  .close-container {
    display: flex;
    justify-content: center;
  }

  #list-container {
    display: flex;
    flex-wrap: wrap;
    height: 100%;
    justify-content: space-between;
    width: 100%;

    .list-button:hover {
      box-shadow: 0 1px 2px rgba(0, 0, 0, 0.176);
      transform: translateY(1px) 0.5s;
    }

    #delete-all-button {
      background-color: rgb(255, 245, 246);
      color: crimson;
    }

    li {
      &.hidden {
        animation: disappear 500ms forwards;

        * {
          display: none !important;
        }
      }

      a {
        color: darkslategrey;
        display: block;
        flex-grow: 1;
        font-weight: 700;
        margin: 0;
        padding: 10px;
        text-decoration: none;

        .open-title {
          margin: 5px;
        }
      }
    }

    a .modified-date {
      color: rgb(128, 128, 128);
      font-size: 0.8em;
      font-weight: 600;
      margin-left: 5px;
    }
  }

  .modal-title {
    color: rgb(47, 79, 79);
    font-size: 1.4em;
    font-weight: 700;
    height: 40px;
    margin: 20px;
  }

  &.small .modal-title {
    margin: 10px;
  }

  #prompt-screen {
    display: flex;
    flex-direction: column;
    width: 100%;
  }

  .buttons {
    display: flex;
    justify-content: space-evenly;
    margin: 1em 0.3em;
  }

  .button {
    border: 1px solid rgb(47, 79, 79);
    border-radius: 3px;
    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.176);
    cursor: pointer;
    font-size: 1em;
    margin: 5px 10px;
    outline: none;
    padding: 5px;
    place-self: center;
    width: 100px;
  }

  .button.hidden {
    display: none;
  }

  ul.open-list {
    height: calc(100% - 80px);
    margin: 0;
    overflow: auto;
    padding: 0;
    text-align: center;
    width: 100%;
  }

  .open-list li {
    align-items: center;
    background-color: rgb(245, 246, 252);
    border: 1px solid rgb(128, 128, 128);
    border-radius: 3px;
    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.176);
    display: inline-flex;
    height: 4em;
    list-style: none;
    margin: 10px auto;
    overflow: hidden;
    padding: 0;

    /* height: fit-content; */
    text-align: left;
    transform: scaleY(1);
    transition: transform 0.5s ease-out;
    width: 80%;

    &:hover {
      box-shadow: 0 1px 2px rgba(0, 0, 0, 0.176);
      transform: translateY(1px) 0.5s;
    }
  }

  form {
    height: 100%;
    margin: 0;
    padding: 0;
    width: 100%;
  }

  .modal-screen-container {
    background-color: rgb(245, 245, 245);
    border: 1px solid rgb(169, 169, 169);
    border-radius: 5px;
    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.176);
    margin-bottom: 15px;
    min-height: calc(80% - 100px);
    padding: 10px;
  }

  .tab-content {
    display: none;
    height: 100%;

    &.active {
      display: flex;
      justify-content: center;
    }
  }

  .modal-screen {
    align-items: center;
    display: flex;
    flex-direction: column;
    flex-grow: 0.8;
    justify-content: space-around;
    text-align: center;
    width: 100%;
  }

  label {
    display: inline-block;
    font-weight: 600;
    margin: 10px;
    text-align: left;
    width: 80%;
  }

  input {
    border: 1px solid rgb(169, 169, 169);
    border-radius: 5px;
    color: rgb(105, 105, 105);
    height: 2em;
    outline: none;
    padding: 5px;
    width: 80%;
  }

  input[type='checkbox'] {
    height: 1em;
    margin: 0.2em;
    width: 1em;
  }

  textarea {
    border: 1px solid rgb(169, 169, 169);
    border-radius: 5px;
    color: rgb(105, 105, 105);
    height: 3em;
    min-height: 3em;
    outline: none;
    padding: 5px;
    resize: vertical;
    width: 80%;
  }

  .padded {
    padding-left: 10%;
    padding-right: 10%;
    text-align: left;

    label {
      width: unset;
    }
  }

  .error {
    color: red;
    font-weight: normal;
    margin-left: 1em;
  }

  .wide-button,
  #file-input-label {
    background-color: rgb(239, 239, 239);
    border: 1px solid rgb(47, 79, 79);
    border-radius: 3px;
    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.176);
    box-sizing: content-box;
    cursor: pointer;
    font-size: 1em;
    font-weight: 400;
    margin: 20px;
    outline: none;
    padding: 10px;
    text-align: center;
    width: 50%;
  }

  button:hover,
  #file-input-label:hover {
    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.176);
    transform: translateY(1px) 0.5s;
  }

  .description {
    display: inline-block;
    font-size: 0.8em;
    margin: 10px;
    text-align: left;
    width: 90%;

    ul {
      display: flex;
      flex-wrap: wrap;
    }

    li {
      width: 33%;
    }
  }

  #file-input {
    display: none;
  }

  ul.thumbnails {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    list-style: none;
    margin: 0;
    padding: 0;
    width: 100%;

    li {
      margin: 20px;
    }

    a {
      color: unset;
      text-decoration: none;
    }

    img {
      height: 120px;
      width: 120px;
    }
  }

  #templates-user ul {
    height: fit-content;
  }

  .modal-message {
    max-width: 100%;
    min-width: calc(100% - 40px);
    padding: 20px;
    text-align: center;

    > div {
      max-width: 100%;
      min-width: calc(100% - 40px);
      padding: 20px;
      text-align: center;
    }
  }

  .modal-content {
    max-width: 100%;
    min-width: calc(100% - 40px);
    padding: 10px;
    text-align: left;
  }

  > #list-container > .modal-message {
    padding-top: 0;

    > div {
      padding-top: 0;
    }
  }

  .indent {
    margin-left: 1em;
    margin-top: 0;
  }
}
/* ... */

